<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailCharacter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="399dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_character_card"
                android:layout_width="255dp"
                android:layout_height="399dp"
                android:layout_gravity="center_vertical"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/img_card_barbara" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_item_list"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/detail_name"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_card_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="14sp"
                    tools:text="Barbara" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/detail_sex"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_card_sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="14sp"
                    tools:text="Female" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/detail_nation"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_card_nation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="14sp"
                    tools:text="Mondstadt" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/detail_birthday"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_card_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:textSize="14sp"
                    tools:text="July 5th" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp">

            <ImageView
                android:id="@+id/img_detail_character_rarity"
                android:layout_width="match_parent"
                android:layout_height="17dp"
                android:src="@drawable/img_4_stars"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:id="@+id/img_character_element"
                style="@style/IconSmall"
                android:src="@drawable/img_hydro" />

            <TextView
                android:id="@+id/tv_character_element"
                style="@style/TextIconSmall"
                tools:text="Hydro" />

            <ImageView
                android:id="@+id/img_character_weapon"
                style="@style/IconSmall"
                android:src="@drawable/img_catalyst" />

            <TextView
                android:id="@+id/tv_character_weapon"
                style="@style/TextIconSmall"
                tools:text="Catalyst" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/leveling_material"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="142dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_item_talent"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/bg_item_list"
                        tools:src="@drawable/img_philosophies_of_freedom" />

                    <TextView
                        android:id="@+id/tv_item_talent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        tools:text="Pihlosophies of Freedom" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_item_boss"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/bg_item_list"
                        tools:src="@drawable/img_ring_of_boreas" />

                    <TextView
                        android:id="@+id/tv_item_boss"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        tools:text="Ring of Boreas" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/img_item_ascension"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:background="@drawable/bg_item_list"
                        tools:src="@drawable/img_forbidden_curse_scroll" />

                    <TextView
                        android:id="@+id/tv_item_ascension"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        tools:text="Forbidden Curse Scroll" />

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/detail"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_item_list"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/tv_detail"
                    style="@style/TextContent.Detail"
                    tools:text="She is the deaconess of the Church of Favonius and a self-proclaimed idol after learning about them from the intrepid adventurer Alice. She is also the daughter of Frederica Gunnhildr and Seamus Pegg, and the younger sister of Jean"
                    android:padding="8dp"
                    android:justificationMode="inter_word"/>

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/btn_detail_share"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/detail_share" />

            <Button
                android:id="@+id/btn_detail_favorite"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/detail_favorite" />


        </LinearLayout>


    </LinearLayout>



</ScrollView>